Error fixed for items that rae food but were not showing due to not returning a nutrient key because it had 0 of that nutrient

--- a/styles/app.css
+++ b/styles/app.css
@@ -160,13 +160,10 @@ h1>.display-6 {
 /* SPINNER STYLING */
 
 .loadingSpinner {
-    height: 100%;
-    background-color: white;
+    background-color: #e3c4a8;
     content: "";
     box-sizing: border-box;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: relative;
     height: 50px;
     width: 50px;
     margin: 0 auto 20px auto;
